--- a/gestao/templates/admin_custom/form_emissor_parceiro.html
+++ b/gestao/templates/admin_custom/form_emissor_parceiro.html
@@ -22,7 +22,7 @@
     <div class="form-group single">
         <label class="form-label" for="{{ form.programas.id_for_label }}">Programas de fidelidade</label>
         {{ form.programas }}
-        <p class="helper-text">Selecione os programas disponíveis para a empresa.</p>
+        <p class="helper-text">Selecione os programas disponíveis para a empresa (opcional).</p>
     </div>
     <div class="form-group single">
         <label class="form-label" for="{{ form.ativo.id_for_label }}">Ativo</label>
